--- a/index.html
+++ b/index.html
@@ -4,4 +4,36 @@
 
 <body>
     
+    <div id="graphContainer"></div>
+
+
+    <script>
+        let GRAPH_SIZE = {width: 1000, height: 500};
+        let MARGIN = {top: 50, bot : 50, left: 50, right: 50};
+        let TOTAL_SIZE = {width: GRAPH_SIZE.width + MARGIN.left + MARGIN.right, height: GRAPH_SIZE.height + MARGIN.top + MARGIN.bot};
+
+        
+        var data = [[0,0,0,0,0], [0.1, 0.2, 0.3, 0.4, 0.5], [0.4,0.4,0.4,0.1,0.1], [0.5,0.4,0.3,0.5,0.4]];
+        var svg = d3.select("#graphContainer")
+            .append("svg")
+                .attr("width", TOTAL_SIZE.width)
+                .attr("height",TOTAL_SIZE.height)
+            .append("g")
+                .attr("transform", "translate("+MARGIN.left+", " + MARGIN.right+ ")"); //Maybe this needs attr("width"/"height")
+
+        var lineFunction = d3.line()
+            .x( (d,i) =>(i))
+            .y( (d) => ((d)));
+        svg.selectAll("polygon")
+            .data(data)
+            .enter()
+            .append("polygon"); //here
+        svg.selectAll("polygon")
+            .data(function(d){
+                return d;
+            })
+            .enter()
+            .attr("d", lineFunction);
+
+    </script>
 </body>
